examples/test/testpolicy5581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5581
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key16: value16
      key1: value31
      key7: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value16
          key12: value40
          key21: value20
      podSelector:
        matchLabels:
          key25: value22
